<resources>
    <string name="app_name">cwm-adndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Phone number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navtitle_dashboard">Dashboard</string>
    <string name="navtitle_chat">Chat</string>
    <string name="navtitle_log">Log</string>
    <string name="log_out">Log out</string>
    <string name="log_out_confirm">Are you sure you want to log out this account?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_continute">Continue</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_send">Send</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_close">Close</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add">Add</string>
    <string name="btn_search">Search</string>
    <string name="btn_clear_history">Clear History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="popup_delete_chat_group_tilte">Leave Group</string>
    <string name="popup_delete_chat_tilte">Delete Chat</string>
    <string name="popup_delete_multiple_chats_tilte">Delete %d Chat</string>
    <string name="popup_delete_chat_group_msg">Are you sure want to delete and leave the group "%s"?</string>
    <string name="popup_delete_chat_msg">Are you sure want to delete this chat?</string>
    <string name="popup_delete_multiple_chats_msg">Are you sure want to delete these chat?</string>
    <string name="popup_clear_chat_tilte">Clear Chat</string>
    <string name="popup_clear_multiple_chats_tilte">Clear %d Chat</string>
    <string name="popup_clear_chat_group_msg">Are you sure want to clear the chat history in "%s"?</string>
    <string name="popup_clear_chat_msg">Are you sure want to clear the chat history?</string>
    <string name="popup_clear_multiple_chats_msg">Are you sure want to clear history in these chat?</string>
    <string name="popup_delete_msg_tilte">Delete message</string>
    <string name="popup_delete_multiple_msgss_tilte">Delete %d messages</string>
    <string name="popup_delete_msg_body">Are you sure want to delete this message?</string>
    <string name="popup_delete_multiple_msgss_body">Are you sure want to delete these messages?</string>
    <string name="invalid_country_code">Invalid country code</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="notification_default_channel_id">cwm_channel_default</string>
    <string name="notification_default_channel_name">cwm_channel_default</string>
    <string name="notification_default_channel_description">cwm default channel</string>
    <string name="notification_channel_chat_id">cwm_channel_chat</string>
    <string name="notification_channel_chat_name">cwm_channel_chat</string>
    <string name="notification_channel_chat_description">cwm chat channel</string>
    <string name="notification_channel_chat_summary_id">cwm_channel_chat_summary</string>
    <string name="notification_channel_chat_summary_name">cwm_channel_chat_summary</string>
    <string name="notification_channel_chat_summary_description">cwm chat summary channel</string>
    <string name="notification_channel_worker_id">cwm_channel_worker</string>
    <string name="notification_channel_worker_name">cwm_channel_worker</string>
    <string name="notification_channel_worker_description">cwm worker channel</string>
    <string name="notification_detail_text">%d new messages</string>
    <string name="notification_detail_text_multi_threads">%d new messages from %d chats</string>
    <string name="notification_mark_as_read">Mark as read</string>
    <string name="notification_reply">Reply</string>
    <string name="RegisterFragment_enter_your_phone_number_to_get_started">Enter your phone number to get started</string>
    <string name="RegisterFragment_enter_your_phone_number">Enter your phone number</string>
    <string name="RegisterFragment_button_register">Register</string>
    <string name="RegisterFragment_you_will_receive_a_verification_code">You will receive a verification code. Carrier rates may apply.</string>
    <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Enter the code we sent to %s</string>
    <string name="NewConversationFragment_title">New conversation</string>
    <string name="conversation_item_sent__send_failed_indicator_description">Send Failed</string>
    <string name="conversation_item_sent__pending_approval_description">Pending Approval</string>
    <string name="conversation_item_sent__delivered_description">Delivered</string>
    <string name="conversation_item_sent__message_read">Message read</string>
    <string name="ConversationItem_copied_text">Copied %s</string>
    <string name="DateUtils_just_now">Now</string>
    <string name="DateUtils_minutes_ago">%dm</string>
    <string name="DateUtils_today">Today</string>
    <string name="DateUtils_yesterday">Yesterday</string>
    <string name="RegisterFragment_call">Call</string>
    <string name="RegisterFragment_wrong_number">Wrong number</string>
    <string name="RegisterFragment_call_me_instead_available_in">Call me instead \n (Available in %1$02d:%2$02d)</string>
    <string name="im_type_content_contact">[Contact]</string>
    <string name="im_type_content_emoticon">[Sticker]</string>
    <string name="im_type_content_url">[Url]</string>
    <string name="im_type_content_multi_media">[MultiMedia]</string>
    <string name="im_type_content_img">[Image]</string>
    <string name="im_type_content_audio">[Audio]</string>
    <string name="im_type_content_video">[Video]</string>
    <string name="im_type_content_doc">[Document]</string>
    <string name="im_type_content_file">[File]</string>
    <string name="im_type_content_group_thread_notification">Group Updated</string>
    <string name="you">You</string>
    <string name="group_thread_notification_created">%s created group</string>
    <string name="group_thread_notification_left">%s left group</string>
    <string name="group_thread_notification_add_new_users">%s added %s to group</string>
    <string name="group_thread_notification_remove_user">%s removed %s from group</string>
    <string name="group_thread_notification_promote_admin">%s promoted %s to group admin</string>
    <string name="group_thread_notification_revoke_admin">%s revoked group admin from %s</string>
    <string name="group_thread_notification_change_groupname">%s changed group\'s name to %s</string>
    <string name="thread_title_participants">%d participants</string>
    <string name="thread_title_user_typing">%s is typing...</string>
    <string name="thread_Me">Me</string>
    <string name="LearnMoreTextView_learn_more">Learn more</string>
    <string name="SpanUtil__read_more">Read more</string>
    <string name="preferences__none">None</string>
    <string name="CommunicationActions_no_browser_found">No web browser found.</string>
    <string name="CommunicationActions_send_email">Send email</string>
    <string name="BottomActionBar_more">More</string>
    <string name="conversation_selection__menu_message_details">Info</string>
    <string name="conversation_selection__menu_copy">Copy</string>
    <string name="conversation_selection__menu_delete">Delete</string>
    <string name="conversation_selection__menu_forward">Forward</string>
    <string name="conversation_selection__menu_reply">Reply</string>
    <string name="conversation_selection__menu_save">Save</string>
    <string name="conversation_selection__menu_resend_message">Resend</string>
    <string name="conversation_selection__menu_multi_select">Select</string>
    <string name="ConversationListFragment_select_all">Select all</string>
    <plurals name="ConversationListFragment_s_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="conversation_item__mms_image_description">Media message</string>
    <string name="conversation_item__secure_message_description">Secure message</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ThumbnailView_Play_video_description">Play video</string>
    <string name="ThumbnailView_Has_a_caption_description">Has a caption</string>
    <plurals name="TransferControlView_n_items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <string name="AudioView_duration" translatable="false">%1$d:%2$02d</string>
    <string name="Slide_image">Image</string>
    <string name="Slide_sticker">Sticker</string>
    <string name="Slide_audio">Audio</string>
    <string name="Slide_video">Video</string>
    <string name="AttachmentKeyboard_camera">Camera</string>
    <string name="AttachmentKeyboard_gallery">Gallery</string>
    <string name="AttachmentKeyboard_file">File</string>
    <string name="AttachmentKeyboard_contact">Contact</string>
    <string name="AttachmentKeyboard_location">Location</string>
    <string name="AttachmentKeyboard_we_needs_permission_to_show_your_photos_and_videos">We need permission to show your photos and videos.</string>
    <string name="AttachmentKeyboard_give_access">Give Access</string>
    <string name="AttachmentKeyboard_payment">Payment</string>
    <string name="StorageUtil__s_s">%1$s/%2$s</string>
    <string name="BlockedUsersActivity__s_has_been_blocked">\"%1$s\" has been blocked.</string>
    <string name="BlockedUsersActivity__failed_to_block_s">Failed to block \"%1$s\"</string>
    <string name="BlockedUsersActivity__s_has_been_unblocked">\"%1$s\" has been unblocked.</string>
    <string name="Permissions_permission_required">Permission required</string>
    <string name="Permissions_continue">Continue</string>
    <string name="Permissions_not_now">Not now</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_application_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Application requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_application_requires_contacts_permission_in_order_to_attach_contact_information">Application requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentManager_application_requires_location_information_in_order_to_attach_a_location">Application requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="ConversationActivity_to_send_audio_messages_allow_application_access_to_your_microphone">To send audio messages, allow application access to your microphone.</string>
</resources>